<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/marginSmall"
    android:layout_marginStart="@dimen/marginSmall"
    android:layout_marginBottom="@dimen/marginMedium"
    android:background="@color/gray"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgRecipeImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recipeImageHeight"
        android:contentDescription="@string/recipeImage"
        android:src="@drawable/food_place_holder" />

    <LinearLayout
        android:id="@+id/lnrRecipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/marginMedium"
        android:paddingStart="@dimen/marginMedium">

        <TextView
            style="@style/blackLargeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginSmall"
            android:layout_weight="2"
            android:text="@string/recipeName" />

        <TextView
            android:id="@+id/txtRecipeName"
            style="@style/blackLargeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnrServing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/marginMedium"
        android:paddingEnd="@dimen/marginMedium"
        android:paddingStart="@dimen/marginMedium">

        <TextView
            style="@style/blackLargeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginSmall"
            android:layout_weight="2"
            android:text="@string/recipeServing" />

        <TextView
            android:id="@+id/txtRecipeServing"
            style="@style/blackLargeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>
</LinearLayout>