<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.ezz.bakingapp.recipeStepDetailes.RecipeStepDetailsFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/exoPlayerHeight">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/simpleExoPlayerView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/exoPlayerHeight"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtNoVideo"
                style="@style/blackLargeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/NoVideoForThisStep"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:layout_marginTop="@dimen/marginMedium"
            android:paddingStart="@dimen/marginMedium"
            android:paddingEnd="@dimen/marginMedium"
            android:id="@+id/txtStepDescription"
            style="@style/blackMediumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPrevious"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/previous"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next"
                    android:textAllCaps="false" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>